Added unit test for MovieDbEndpoint

--- a/BotFrameworkTest1.Tests/BotFrameworkTest1.Tests.csproj
+++ b/BotFrameworkTest1.Tests/BotFrameworkTest1.Tests.csproj
@@ -13,7 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="MovieDB" />
+      <ProjectReference Include="..\BotFrameworkTest1\BotFrameworkTest1.csproj" />
     </ItemGroup>
 
 </Project>
