Changed project names and namespaces to MovieBot

--- a/MoviesBot.Tests/MoviesBot.Tests.csproj
+++ b/MoviesBot.Tests/MoviesBot.Tests.csproj
@@ -18,7 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\BotFrameworkTest1\BotFrameworkTest1.csproj" />
+      <ProjectReference Include="..\MoviesBot\MoviesBot.csproj" />
     </ItemGroup>
 
 </Project>
