Added appsettings keys

--- a/MoviesBot/appsettings.json
+++ b/MoviesBot/appsettings.json
@@ -1,4 +1,13 @@
 {
   "MicrosoftAppId": "",
-  "MicrosoftAppPassword": ""
+  "MicrosoftAppPassword": "",
+  "LuisAPIHostName":"westeurope.api.cognitive.microsoft.com",
+  "LuisAPIKey":"",
+  "LuisAppId":"",
+  "BotName":"",
+  "WebChatSecret":"",
+  "MovieDbBaseUri":"api.themoviedb.org/3",
+  "MovieDbApiKey":"",
+  "MovieDbMoviesEndpointPath":"/discover/movie",
+  "MovieDbGenresEndpointPath":"/genre/movie/list"
 }
